[project]
name = "oxford-genai-llmops-project"
version = "0.1.0"
description = "A microservice for Retrieval-Augmented Generation over scientific abstracts"
authors = [
  { name = "Geoffrey", email = "jameslambert062@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
  "fastapi>=0.95.0,<1.0.0",
  "uvicorn>=0.22.0,<1.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
